--- a/src/app/profile-editor/profile-editor.component.html
+++ b/src/app/profile-editor/profile-editor.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
-  
+
   <label>
     First Name:
     <input type="text" formControlName="firstName">
@@ -10,5 +10,32 @@
     <input type="text" formControlName="lastName">
   </label>
 
+  <div formGroupName="address">
+    <h3>Address</h3>
+
+    <label>
+      Street:
+      <input type="text" formControlName="street">
+    </label>
+
+    <label>
+      City:
+      <input type="text" formControlName="city">
+    </label>
+
+    <label>
+      State:
+      <input type="text" formControlName="state">
+    </label>
+
+    <label>
+      Zip Code:
+      <input type="text" formControlName="zip">
+    </label>
+  </div>
+
+  <p>
+    <button (click)="updateProfile()">Update Profile</button>
+  </p>
   <button type="submit" [disabled]="!profileForm.valid">Submit</button>
 </form>
